# Youtube-Content-Factory

./: .gitignore  README.md  crewai-youtube-pitch.html  pyproject.toml  report.md
Instructions/: Phase_1_Intro.md  Phase_2_Build_First_Crew.md  Phase_3_Tool_Calling.md  Phase_4_Web_Search_Integration.md  Phase_5_MCP_Integration.md  README.md
knowledge/: user_preference.txt
src/my_first_crew_ai_project/: crew.py  main.py
src/my_first_crew_ai_project/config/: agents.yaml  tasks.yaml
src/my_first_crew_ai_project/mcp/: local_mcp_server.py  mcp_server.py
