[project]
name = "my_first_crew_ai_project"
version = "0.1.0"
description = "my first crew ai project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.10.1",
]

[project.scripts]
my_first_crew_ai_project = "my_first_crew_ai_project.main:run"
run_crew = "my_first_crew_ai_project.main:run"
train = "my_first_crew_ai_project.main:train"
replay = "my_first_crew_ai_project.main:replay"
test = "my_first_crew_ai_project.main:test"
run_with_trigger = "my_first_crew_ai_project.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
